--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and Test
+name: Build and Deploy
 
 on:
   push:
@@ -13,11 +13,16 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: Install Angular CLI
-      run: npm install -g @angular/cli
-
     - name: Install Dependencies
       run: npm install
 
     - name: Build Angular App
-      run: ng build --prod
+      run: npm run build --prod
+
+    - name: Deploy to GitHub Pages
+      uses: JamesIves/github-pages-deploy-action@4.1.2
+      with:
+        ACCESS_TOKEN: ${{ secrets.API_KEY }}
+        BRANCH: gh-pages
+        FOLDER: dist/ng-flix
+
